services/kyc_match/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-match-deployment
  labels:
    app: kyc-match
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc-match
  template:
    metadata:
      labels:
        app: kyc-match
    spec:
      containers:
        - name: kyc-match-docker
          image: trackwizz/kyc_match:skt-22-1-3
          imagePullPolicy: Always
          ports:
            - containerPort: 7003
          readinessProbe:
            httpGet:
              path: /api/match/doc/actuator/health
              port: 7003
            initialDelaySeconds: 5
            periodSeconds: 10
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     [...]
