services/kyc_match/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kyc-match-clusterip-service
  labels:
    app: kyc-match
spec:
  type: ClusterIP
  selector:
    app: kyc-match
  ports:
    - port: 80
      targetPort: 7003
